--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^7.2.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-template-lint": "^1.0.0-beta.6",
     "ember-cli-uglify": "^2.1.0",
     "ember-concurrency": "^0.8.22",
     "ember-data": "~3.4.0",
@@ -44,6 +44,8 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^5.0.1",
     "ember-route-action-helper": "^2.0.6",
+    "ember-simple-auth": "^1.7.0",
+    "ember-simple-auth-token": "^4.0.4",
     "ember-source": "~3.4.0",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
