--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ermahgerd-emberjs-jwt-token",
-  "version": "0.0.0",
+  "version": "0.0.1-rc.1",
   "private": true,
   "description": "Demo & test EmberJs application authenticating and authorized with Rails backend.",
   "repository": "",
@@ -35,7 +35,6 @@
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^7.2.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-template-lint": "^1.0.0-beta.6",
     "ember-cli-uglify": "^2.1.0",
     "ember-concurrency": "^0.8.22",
     "ember-data": "~3.4.0",
@@ -47,6 +46,7 @@
     "ember-simple-auth": "^1.7.0",
     "ember-simple-auth-token": "^4.0.4",
     "ember-source": "~3.4.0",
+    "ember-template-lint": "^1.0.0-beta.6",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
     "loader.js": "^4.7.0",
